--- a/backend-app/backend/Dockerfile
+++ b/backend-app/backend/Dockerfile
@@ -14,6 +14,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+# Add the current directory to Python path
+ENV PYTHONPATH=/app
+
 # Expose port
 EXPOSE 8000
 
